adding GraphQL functionality to lesson 4
