# schema.js
@@ -1,0 +1,70 @@
+const { 
+    GraphQLObjectType,
+    GraphQLString,
+    GraphQLList,
+    GraphQLSchema,
+    GraphQLNonNull
+  } = require('graphql');
+  
+  // Define Contact type
+  const ContactType = new GraphQLObjectType({
+    name: 'Contact',
+    fields: () => ({
+      firstName: { type: GraphQLString },
+      lastName: { type: GraphQLString },
+      email: { type: GraphQLString },
+      favoriteColor: { type: GraphQLString },
+      birthday: { type: GraphQLString }
+    })
+  });
+  
+  // Define Root Query
+  const RootQuery = new GraphQLObjectType({
+    name: 'RootQueryType',
+    fields: {
+      contact: {
+        type: ContactType,
+        args: {
+          firstName: { type: GraphQLString }
+        },
+        resolve(parent, args) {
+          // Your logic to retrieve a single contact by firstName
+          // This could be querying from MongoDB using Mongoose
+        }
+      },
+      contacts: {
+        type: new GraphQLList(ContactType),
+        resolve(parent, args) {
+          // Your logic to retrieve all contacts
+          // This could be querying from MongoDB using Mongoose
+        }
+      }
+    }
+  });
+  
+  // Define Mutations
+  const Mutation = new GraphQLObjectType({
+    name: 'Mutation',
+    fields: {
+      addContact: {
+        type: ContactType,
+        args: {
+          firstName: { type: new GraphQLNonNull(GraphQLString) },
+          lastName: { type: new GraphQLNonNull(GraphQLString) },
+          email: { type:new GraphQLNonNull(GraphQLString) },
+          favoriteColor: { type:new GraphQLNonNull(GraphQLString) },
+          birthday: { type:new GraphQLNonNull(GraphQLString) }
+        },
+        resolve(parent, args) {
+          // Your logic to add a new contact to the database
+          // This could involve creating a new document in MongoDB using Mongoose
+        }
+      }
+    }
+  });
+  
+  module.exports = new GraphQLSchema({
+    query: RootQuery,
+    mutation: Mutation
+  });
+  
